--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
+    <header>
+        <h1>Rock Paper Scissors</h1>
+    </header>
+    <div class="score-board">
+        <div id="user-label" class="badge">user</div>
+        <div id="comp-label" class="badge">comp</div>
+        <span id="user-score">0</span>:<span id="comp-score">0</span>
+    </div>
+    <div class="result">
+       <p>Paper covers rock. You win!</p>
+    </div>
+    <div class="choices">
+       <div class="choice" id="rock"></div>
+       <div class="choice" id="paper"></div>
+       <div class="choice" id="scissors"></div>
+    </div>
+    <p id="action-message">Make Your Move</p>
     <script src="script.js"></script>
 </body>
 </html>
