add images source for the three choices: rock, paper, scissors

--- a/index.html
+++ b/index.html
@@ -19,9 +19,15 @@
        <p>Paper covers rock. You win!</p>
     </div>
     <div class="choices">
-       <div class="choice" id="rock"></div>
-       <div class="choice" id="paper"></div>
-       <div class="choice" id="scissors"></div>
+       <div class="choice" id="rock">
+        <img src="rock.png" alt="rock">
+       </div>
+       <div class="choice" id="paper">
+        <img src="paper.png" alt="paper">
+       </div>
+       <div class="choice" id="scissors">
+        <img src="scissors.png" alt="scissors">
+       </div>
     </div>
     <p id="action-message">Make Your Move</p>
     <script src="script.js"></script>
