--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     </div>
     <div class="choices">
        <div class="choice" id="rock">
-        <img src="rock.png" alt="rock">
+        <img src="Images/rock.png" alt="rock">
        </div>
        <div class="choice" id="paper">
-        <img src="paper.png" alt="paper">
+        <img src="Images/paper.png" alt="paper">
        </div>
        <div class="choice" id="scissors">
-        <img src="scissors.png" alt="scissors">
+        <img src="Images/scissors.png" alt="scissors">
        </div>
     </div>
     <p id="action-message">Make Your Move</p>
