capitalize the first letter of rock, paper, and scissors so the results will display uppercased

--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
        <p>Paper covers rock. You win!</p>
     </div>
     <div class="choices">
-       <div class="choice" id="rock">
+       <div class="choice" id="Rock">
         <img src="Images/rock.png" alt="rock">
        </div>
-       <div class="choice" id="paper">
+       <div class="choice" id="Paper">
         <img src="Images/paper.png" alt="paper">
        </div>
-       <div class="choice" id="scissors">
+       <div class="choice" id="Scissors">
         <img src="Images/scissors.png" alt="scissors">
        </div>
     </div>
