create reset button andadd css attributes

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
        </div>
     </div>
     <p id="action-message">Make Your Move</p>
+    <div id="container">
+        <button id="resetBtn">Start Over</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
